fix: gradle 추가, main color 설정 후 로그인 UI 적용

--- a/app/src/main/res/drawable/sign_in_gradient.xml
+++ b/app/src/main/res/drawable/sign_in_gradient.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:startColor="#ff0000"
+        android:startColor="@color/main2"
         android:endColor="#ffffff" />
 </shape>
