--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -45,10 +45,12 @@
                     style="@style/Size20.Black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     tools:text="post content" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_marginTop="10dp"
                 android:id="@+id/layout_comments"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
