--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,17 +13,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:entries="@array/option" />
-
         <EditText
             android:id="@+id/searchWord"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:hint="입력 하는 곳."
             android:inputType="text"
             android:minHeight="48dp" />
@@ -32,33 +28,30 @@
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
             android:text="검색하기" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/result_name"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginStart="30dp"
-        android:text="friend name" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/FragrecyclerView"
+        android:layout_width="387dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <TextView
-        android:id="@+id/result_email"
-        android:layout_width="125dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="70dp"
-        android:text="이메일" />
-
-    <Button
-        android:id="@+id/add_friend"
+        android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="70dp"
-        android:text="친구 추가" />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="60dp"
+        android:text="result" />
 
 
 </FrameLayout>
