--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,6 +14,7 @@
         android:text="회원가입"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="75dp"
         android:text="이메일"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/join_explain" />
 
@@ -47,6 +50,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="45dp"
         android:text="비밀번호"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/join_name" />
 
@@ -69,6 +74,8 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="90dp"
         android:text="제약사항"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/join_birth1" />
 
@@ -78,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="18dp"
-        android:text="· 비밀번호를 영어로 입력해주세요."
+        android:text="· 비밀번호를 영어와 숫자로 입력해주세요."
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/join_restrictions" />
 
@@ -99,6 +106,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="45dp"
         android:text="이름"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/join_id1" />
 
@@ -156,6 +165,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="70dp"
         android:text="생년월일"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/join_passwd1" />
 
