--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -20,4 +20,8 @@
         android:icon="@drawable/list"
         android:title="친구 목록"
         />
+    <item
+        android:id="@+id/AddPost"
+        android:title="포스트 추가"
+        />
 </menu>
