--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -22,6 +22,7 @@
         />
     <item
         android:id="@+id/AddPost"
+        android:icon="@drawable/plus"
         android:title="포스트 추가"
         />
 </menu>
