--- a/app/src/main/res/drawable/sign_in_button_continue.xml
+++ b/app/src/main/res/drawable/sign_in_button_continue.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/main" />
+    <solid android:color="@color/main3" />
     <corners
         android:topRightRadius="24dp"
         android:topLeftRadius="24dp"
