--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -37,9 +37,10 @@
         android:id="@+id/nv_timeline"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
-        tools:layout_editor_absoluteY="-169dp">
+        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_timeline"
