--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -3,15 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="16dp"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:background="@color/black"
-        app:cardCornerRadius="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="22dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,56 +22,43 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/iv_promotion_image"
-                android:layout_width="0dp"
+                android:id="@+id/iv_post_image"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@mipmap/ic_launcher_bugi" />
-
-            <TextView
-                android:id="@+id/tv_post_title"
-                style="@style/Size20.Black.Bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_promotion_image"
-                tools:text="이것은 Title" />
-
-            <!--            <TextView-->
-            <!--                android:id="@+id/tv_user_name"-->
-            <!--                style="@style/Size16.Black"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginStart="6dp"-->
-            <!--                app:layout_constraintBottom_toBottomOf="@id/tv_post_title"-->
-            <!--                app:layout_constraintStart_toEndOf="@id/tv_post_title"-->
-            <!--                tools:text="사용자 이름?" />-->
-
-
-            <TextView
-                android:id="@+id/tv_post_content"
-                style="@style/Size14"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="10dp"
-                android:maxLines="1"
-                android:text="@{product.label}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_post_title"
-                tools:text="이것은 content 좀 더 긴 내용이 들어갈건데 알아서 줄이기 해보자고" />
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/tv_post_title"
+        style="@style/Size16.Black.Bold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="6dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintEnd_toStartOf="@id/button_setting_post"
+        app:layout_constraintStart_toStartOf="@id/card_view_post"
+        app:layout_constraintTop_toBottomOf="@id/card_view_post"
+        tools:text="이것은 Title" />
+
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/button_setting_post"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/transparent"
+        android:scaleType="centerInside"
+        android:src="@drawable/setting"
+        app:layout_constraintEnd_toEndOf="@id/card_view_post"
+        app:layout_constraintStart_toEndOf="@id/tv_post_title"
+        app:layout_constraintTop_toBottomOf="@id/card_view_post" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
