--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,62 +7,76 @@
     tools:context=".SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <EditText
             android:id="@+id/searchWord"
-            android:layout_width="0dp"
+            android:layout_width="380dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:hint="입력 하는 곳."
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="40dp"
+            android:paddingLeft="23dp"
+            android:background="@drawable/round_corner"
+            android:hint="찾을 사용자의 이름을 입력하세요"
+            android:textSize = "17sp"
             android:inputType="text"
             android:minHeight="48dp" />
 
-        <Button
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:text="검색하기" />
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="50dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center|right"
+            android:layout_marginStart="321dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/search_tbutton"
+            android:scaleType="centerInside"
+            android:src="@drawable/search_icon_resize"/>
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/FragrecyclerView"
         android:layout_width="387dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="130dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
 
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="#aaa" />
+
     <TextView
         android:id="@+id/showID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="60dp"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="100dp"
+        android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/gray"
         android:text="아이디" />
     <TextView
         android:id="@+id/showEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="60dp"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:layout_marginStart="170dp"
+        android:layout_marginTop="100dp"
+        android:textSize="15sp"
+        android:textColor="@color/gray"
         android:textStyle="bold"
         android:text="이메일" />
 
