--- a/app/src/main/res/layout/friendslist.xml
+++ b/app/src/main/res/layout/friendslist.xml
@@ -10,7 +10,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="친구"
         android:textSize="20sp"
         android:textColor="#000"
