--- a/app/src/main/res/drawable/friendlist_button.xml
+++ b/app/src/main/res/drawable/friendlist_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#0055FF" />
+    <solid android:color="@color/main2" />
     <corners
         android:topRightRadius="24dp"
         android:topLeftRadius="24dp"
