--- a/app/src/main/res/layout/fragment_adding_post.xml
+++ b/app/src/main/res/layout/fragment_adding_post.xml
@@ -77,6 +77,7 @@
                     android:background="@drawable/backgrond_round"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:scaleType="center"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.07" />
